--- a/assignment/index.html
+++ b/assignment/index.html
@@ -17,6 +17,7 @@
     <script src="js/testShader.js"></script>
     <script src="js/volume.js"></script>
     <script src="js/camera.js"></script>
+    <script src="js/singlePassMipShader.js"></script>
     <script src="js/vis1.js"></script>
 
 </head>
