--- a/assignment/index.html
+++ b/assignment/index.html
@@ -18,6 +18,7 @@
     <script src="js/volume.js"></script>
     <script src="js/camera.js"></script>
     <script src="js/firstHitShader.js"></script>
+    <script src="js/CuttingPlaneEditor.js"></script>
     <script src="js/vis2.js"></script>
 
 </head>
@@ -60,6 +61,8 @@
             <label><input type="radio" name="renderSide" value="above" checked> Above</label>
             <label><input type="radio" name="renderSide" value="below"> Below</label><br>
             <h4>Cutting Plane Controls</h4>
+            <label for="planeTranslate">Translation:</label>
+            <input type="range" id="planeTranslate" min="-1" max="1" step="0.01" value="0"><br>
             <label for="planeX">Rotation X:</label>
             <input type="range" id="planeX" min="-1" max="1" step="0.01" value="0"><br>
             <label for="planeY">Rotation Y:</label>
