--- a/assignment/index.html
+++ b/assignment/index.html
@@ -69,6 +69,9 @@
             <input type="range" id="planeY" min="-1" max="1" step="0.01" value="0"><br>
             <label for="planeColor">Color:</label>
             <input type="color" id="planeColor" value="#f50000"><br>
+            <label>
+                <input type="checkbox" id="togglePlaneMesh" checked> Enable Coloring
+            </label><br>
         </div>
 
     </div>
