--- a/assignment/index.html
+++ b/assignment/index.html
@@ -69,10 +69,19 @@
             <input type="range" id="planeY" min="-1" max="1" step="0.01" value="0"><br>
         </div>
 
+        <!-- 4. SSAO Controls -->
+        <div id="ssaoControls" style="color: white;">
+            <h4>Ambient Occlusion Controls</h4>
+            <label for="ssaoRadius">SSAO Radius:</label>
+            <input type="range" id="ssaoRadius" min="-2.0" max="2.0" step="0.1" value="0.5"><br>
+            <label for="ssaoBias">SSAO Bias:</label>
+            <input type="range" id="ssaoBias" min="-0.1" max="0.1" step="0.001" value="0.025"><br>
+            <label for="ssaoStrength">SSAO Strength:</label>
+            <input type="range" id="ssaoStrength" min="-2" max="2" step="0.1" value="1.0"><br>
+        </div>
+
     </div>
 </div>
-
-
 
 </body>
 </html>
