--- a/assignment/index.html
+++ b/assignment/index.html
@@ -26,7 +26,7 @@
 <!-- call init function when page has loaded -->
 <body onload="init()">
 
-<h1>Vis2 Exercise</h1>
+<h1>2. Assignment</h1>
 <h2>Harhammer Martin, Lazarevic Valentino, Dreier Martin</h2>
 
 <!-- data selector -->
